<resources>
    <string name="app_name">TAMAS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="applyToJobButton">APPLY</string>
    <string name="view_course">View Course</string>
    <string name="course_description">Course Description:</string>
    <string name="credit">Credit:</string>
    <string name="experience">Experience: </string>
    <string name="studentIDview">McGill ID: </string>
    <string name="jobsTA">TA:</string>
    <string name="graderJob">Grader:</string>
    <string name="applyForJobView">Apply For Job</string>
    <string name="acceptbutton">ACCEPT</string>
    <string name="rejectbutton">REJECT</string>
    <string name="jobOfferText">VIEW OFFER</string>
    <string name="spinnerHint">SELECT COURSE</string>
    <string name="line">_______________________________</string>
</resources>
